# actix-mongo-template

./: .pre-commit-config.yaml  Cargo.toml  LICENSE
src/: config.rs  main.rs
src/database/: core_service.rs  mod.rs  mongodb.rs
src/helpers/: enums.rs
src/middleware/: encryption.rs
src/models/: user.rs
src/routes/: mod.rs  user_routes.rs
src/services/: user_service.rs
src/traits/: jwt.rs  model.rs
