[package]
name = "actix-mongo-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = "0.4.34"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.2"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
mongodb = "2.8.1"
serde = "1.0.196"
serde_json = "1.0.113"
